--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
             <h2>ข้อมูลส่วนตัว</h2>
             <div class="input-group">
                 <label for="monthlyIncome">รายได้หลังหักภาษีและภาระผ่อนชำระ (บาท)</label>
-                <input type="number" id="monthlyIncome" value="0" min="0">
-                <input type="range" id="monthlyIncomeRange" min="0" max="100000" value="0">
+                <input type="number" id="monthlyIncome" value="" min="0"> <!-- Removed initial value here -->
+                <input type="range" id="monthlyIncomeRange" min="0" max="500000" value="0">
             </div>
             <div class="input-group">
                 <label for="monthlyDebt">ภาระหนี้ต่อเดือน (บาท)</label>
-                <input type="number" id="monthlyDebt" value="0" min="0">
-                <input type="range" id="monthlyDebtRange" min="0" max="50000" value="0">
+                <input type="number" id="monthlyDebt" value="" min="0"> <!-- Removed initial value here -->
+                <input type="range" id="monthlyDebtRange" min="0" max="200000" value="0">
             </div>
             <div class="input-group">
                 <label for="age">อายุ (ปี)</label>
-                <input type="number" id="age" value="0" min="0" max="100">
+                <input type="number" id="age" value="" min="0" max="100"> <!-- Removed initial value here -->
                 <input type="range" id="ageRange" min="0" max="100" value="0">
             </div>
             <div class="input-group">
                 <label for="interestRate">% อัตราดอกเบี้ยเฉลี่ย 3 ปี</label>
-                <input type="text" id="interestRate" value="0.00%" step="0.01" min="0" max="20">
+                <input type="text" id="interestRate" value="" step="0.01" min="0" max="20"> <!-- Removed initial value here -->
                 <input type="range" id="interestRateRange" min="0" max="20" step="0.01" value="0.00">
             </div>
             <div class="button-group">
-                <button id="clearBtn" class="secondary-button">ล้างข้อมูล</button>
-                <button id="calculateBtn" class="primary-button">คำนวณ</button>
+                <button id="clearBtn" class="secondary-button" type="button">ล้างข้อมูล</button>
+                <button id="calculateBtn" class="primary-button" type="button">คำนวณ</button>
             </div>
         </div>
 
